--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <center><img src="images/17.jpg" alt="17"></center>
 <p></p>
 <center><img src="images/18.jpg" alt="18"></center>
-<a href="https://noeljyothis.github.io/chapter1/" target="_blank">
+<a href="https://noeljyothis.github.io/TheEmergencyBrake_2/" target="_blank">
 <button>Click here!</button>
 </body>
 </html>
